fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 body {
-  background-size: cover;
+  background-image: url('./components/homebg.jpeg');
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url('./components/homebg.jpeg');
+  background-size: cover;
+  background-attachment: fixed;
   min-height: 100vh;
 }
 
@@ -34,6 +35,9 @@ button:disabled {
   background-color: #171b24;
   margin-bottom: 20px;
   box-shadow: 0px 0px 10px #000000;
+  padding: 10px;
+  height: 200px;
+  font-size: 15px;
 }
 .card-title {
   margin-bottom: 25px;
@@ -80,9 +84,8 @@ button:disabled {
 }
 
 .modal.fade .modal-dialog {
-  
   transform: scale(.8); 
-  transition: transform 0.3s ease; 
+  transition: transform 0.3s; 
 }
 
 .modal.show .modal-dialog {
@@ -109,6 +112,10 @@ button:disabled {
 .form-control:focus {
   background-color: #12151c;
   color: white;
+}
+.form-control::placeholder {
+  
+  color: #a6a6a6;
 }
 .col-form-label {
   background: transparent;
